[gd_scene load_steps=17 format=3 uid="uid://b8pamn41tkwr5"]

[ext_resource type="Script" path="res://scenes/weapons/large_shot/large_shot.gd" id="1_mv43r"]
[ext_resource type="PackedScene" uid="uid://cltyyd03qhp1x" path="res://scenes/components/projectile_component/projectile_component.tscn" id="2_mmcdy"]
[ext_resource type="Shader" path="res://vfx/fade/horizontal_fade.gdshader" id="3_m3gn5"]
[ext_resource type="Texture2D" uid="uid://bhy28bj1jywm4" path="res://assets/sprites/shots/energy_large_blue.png" id="4_wobw2"]
[ext_resource type="PackedScene" uid="uid://ddwtfhud2pam6" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="5_grffj"]
[ext_resource type="AudioStream" uid="uid://dfs6c76mpcgk4" path="res://assets/audios/hits/kick_soft_jab_impact_03.wav" id="6_jur2y"]
[ext_resource type="AudioStream" uid="uid://btg5dpw84rysn" path="res://assets/audios/shots/sci-fi_weapon_blaster_laser_boom_small_03.wav" id="7_h8ays"]
[ext_resource type="AudioStream" uid="uid://b3lles5jvkijm" path="res://assets/audios/blocked/sword_hit_impact_04.wav" id="8_crf57"]
[ext_resource type="AudioStream" uid="uid://b4rdy2f8qysov" path="res://assets/audios/shots/gun_submachine_silenced_shot_04.wav" id="9_3sj6b"]

[sub_resource type="Animation" id="Animation_mdgm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/fade_to")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_pipi4"]
resource_name = "break"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/fade_to")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ualya"]
resource_name = "flying"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2f8kg"]
_data = {
"RESET": SubResource("Animation_mdgm5"),
"break": SubResource("Animation_pipi4"),
"flying": SubResource("Animation_ualya")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ikpc1"]
resource_local_to_scene = true
shader = ExtResource("3_m3gn5")
shader_parameter/fade_to = 1.0
shader_parameter/flip = true
shader_parameter/hframes = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_8nyv0"]
radius = 9.05539

[sub_resource type="CircleShape2D" id="CircleShape2D_aioff"]
radius = 15.0

[node name="LargeShot" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_mv43r")

[node name="ProjectileComponent" parent="." instance=ExtResource("2_mmcdy")]
speed = 380

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "flying"
libraries = {
"": SubResource("AnimationLibrary_2f8kg")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ikpc1")
position = Vector2(-10, 0)
texture = ExtResource("4_wobw2")
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_8nyv0")

[node name="TerrainRayCast" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(16, 0)

[node name="HitboxComponent" parent="." instance=ExtResource("5_grffj")]
visible = false
collision_layer = 8
collision_mask = 4
damage = 4
oneshot = true
density = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_aioff")
debug_color = Color(0.819608, 0.364706, 0.447059, 0.419608)

[node name="HitSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jur2y")
volume_db = -23.11
pitch_scale = 3.05
bus = &"SE"

[node name="ShootSE" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_h8ays")
volume_db = -20.319
bus = &"SE"

[node name="BlockedSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_crf57")
volume_db = -12.787
bus = &"SE"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(3.6, 3.6)

[node name="DeniedSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3sj6b")
volume_db = -19.089
pitch_scale = 1.11
bus = &"SE"

[connection signal="blocked" from="HitboxComponent" to="." method="_on_hitbox_component_blocked"]
[connection signal="broken" from="HitboxComponent" to="." method="_on_hitbox_component_broken"]
[connection signal="denied" from="HitboxComponent" to="." method="_on_hitbox_component_denied"]
[connection signal="hit" from="HitboxComponent" to="." method="_on_hitbox_component_hit"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
